Fix justification and alignment

--- a/app/assets/stylesheets/index/feed.css
+++ b/app/assets/stylesheets/index/feed.css
@@ -11,18 +11,17 @@
 .posts-body{
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
-    justify-items: center;
     align-items: center;
-}
-
-.right-body{
-    display: flex;
-    justify-content: space-around;
 }
 
 .post-summary{
     display: flex;
     flex-direction: column;
-    /* padding-left: 10%; */
+    margin-left: 5%;
+}
+
+.post-info{
+    justify-self: center;
+    padding-top: 10%;
 }
 
